# rcpch-nhs-numbers

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rcpch_nhs_numbers/: nhs_number_generator.py  nhs_number_validator.py
src/rcpch_nhs_numbers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_nhs_number_validation.py
