[project]
name = "rcpch-nhs-numbers"
dynamic = ["version"]
authors = [
  { name="eatyourpeas", email="simon@eatyourpeas.co.uk" },
  { name="anchit chandran", email="anchit97123@gmail.com" },
  { name="marcus baw", email="marcusbaw@gmail.com" },
]
description = "NHS number tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/rcpch/rcpch-nhs-numbers"
"Bug Tracker" = "https://github.com/rcpch/rcpch-nhs-numbers/issues"



[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rcpch_nhs_numbers.__version__"}
